tests/dummy/bad/templates/nested-value-adding-template.yaml.j2
one: 1
two: {{ test.one + 1 }}
three: 3
four: {{2 + 2}}
